--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 <h2>Coding</h2>
                 <p>I mean obviously since I'm trying to make a website and all...</p>
             </div>
+
+            <div class = "child">
+                <h2>Cooking</h2>
+                <p>Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
+            </div>
+
+            <div class = "child">
+                <h2>Dancing</h2>
+                <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
+            </div>
         </div>
     </body>
 </html>
