added button css and html

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
                 <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
             </div>
         </div>
+
+        <div class="button container">
+            <a href="./links/cv.html"><h3>Here's my CV.</h3></a>
+        </div>
     </body>
 </html>
