add education section to cv

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="button container">
-            <a href="./links/cv.html"><h3>Here's my CV.</h3></a>
+            <a href="./links/cv.html"><h3 class = "button">Here's my CV.</h3></a>
         </div>
     </body>
 </html>
