--- a/links/cv.html
+++ b/links/cv.html
@@ -12,19 +12,28 @@
         </div>
 
         <div class="education container">
+            <div class = "title container">
+                <h2>Education</h3>
+            </div>
             <div class = "child">
-                <h2>Coding</h2>
-                <p>I mean obviously since I'm trying to make a website and all...</p>
+                <h2>University College London (UCL) 	 London, UK, September 2019 – August 2022 (Expected)</h2>
+                <p>BASc Arts and Sciences – Interdisciplinary Degree, Major Pathway in Sciences and Engineering, Minor in Cultures</p>
+                <li>
+                    <ul>Modules include Modern Physics, Mathematical Methods (with Python 3), Architectural Research, Quantitative Methods and Mathematical Thinking, and Interdisciplinary Research Methods.</ul>
+                    <ul>Best Academic Performance in the Core modules for the Sciences and Engineering pathway</ul>
+                    <ul>Societies: Artificial Intelligence Society, Dance Society, Free Hype Society (non-profit), Ice Club</ul>
+                </li>
             </div>
 
             <div class = "child">
-                <h2>Cooking</h2>
-                <p>Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
+                <h2>International School of Béarn 	Pau, France, August 2017 – June 2019</h2>
+                <p>A Levels: English Literature (A*), Mathematics (A*), Physics (A*), French (A*)</p>
+                <p>Earned diplomas two years in a row for ‘Highest Achievement’ and ‘Contribution to School Life’ for upper secondary</p>
             </div>
 
             <div class = "child">
-                <h2>Dancing</h2>
-                <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
+                <h2>International School of Stavanger 	Stavanger, Norway, August 2016 – June 2017</h2>
+                <p>IGCSEs: English Language (A*), Mathematics (A*), English Literature, History, Combined Sciences (Double Award), Art, Spanish, French (‘Cambridge Top in the World’ Award for IGCSE French - First Language in June 2017)</p>
             </div>
 
     </body>
