edit css cv layout

--- a/links/cv.html
+++ b/links/cv.html
@@ -7,31 +7,31 @@
     </head>
 
     <body>
-        <div class="header">
-            <h1>Joy Xu</h1>
+        <div>
+            <h1 class = "header">Joy Xu</h1>
         </div>
 
         <div class="education container">
             <div class = "title container">
-                <h2>Education</h3>
+                <h2 class="centered">Education</h2>
             </div>
-            <div class = "child">
+            <div class = "child container">
                 <h3>University College London (UCL) 	 London, UK, September 2019 – August 2022 (Expected)</h3>
                 <p>BASc Arts and Sciences – Interdisciplinary Degree, Major Pathway in Sciences and Engineering, Minor in Cultures</p>
-                <li>
-                    <ul>Modules include Modern Physics, Mathematical Methods (with Python 3), Architectural Research, Quantitative Methods and Mathematical Thinking, and Interdisciplinary Research Methods.</ul>
-                    <ul>Best Academic Performance in the Core modules for the Sciences and Engineering pathway</ul>
-                    <ul>Societies: Artificial Intelligence Society, Dance Society, Free Hype Society (non-profit), Ice Club</ul>
-                </li>
+                <ul>
+                    <li>Modules include Modern Physics, Mathematical Methods (with Python 3), Architectural Research, Quantitative Methods and Mathematical Thinking, and Interdisciplinary Research Methods.</li>
+                    <li>Best Academic Performance in the Core modules for the Sciences and Engineering pathway</li>
+                    <li>Societies: Artificial Intelligence Society, Dance Society, Free Hype Society (non-profit), Ice Club</li>
+                </ul>
             </div>
 
-            <div class = "child">
+            <div class = "child container">
                 <h3>International School of Béarn 	Pau, France, August 2017 – June 2019</h3>
                 <p>A Levels: English Literature (A*), Mathematics (A*), Physics (A*), French (A*)</p>
                 <p>Earned diplomas two years in a row for ‘Highest Achievement’ and ‘Contribution to School Life’ for upper secondary</p>
             </div>
 
-            <div class = "child">
+            <div class = "child container">
                 <h3>International School of Stavanger 	Stavanger, Norway, August 2016 – June 2017</h3>
                 <p>IGCSEs: English Language (A*), Mathematics (A*), English Literature, History, Combined Sciences (Double Award), Art, Spanish, French (‘Cambridge Top in the World’ Award for IGCSE French - First Language in June 2017)</p>
             </div>
