added html content experience

--- a/links/cv.html
+++ b/links/cv.html
@@ -11,7 +11,7 @@
             <h1 class = "header">Joy Xu</h1>
         </div>
 
-        <div class="education container">
+        <div class="container" id = "education">
             <div class = "title container">
                 <h2 class="centered">Education</h2>
             </div>
@@ -35,6 +35,44 @@
                 <h3>International School of Stavanger 	Stavanger, Norway, August 2016 – June 2017</h3>
                 <p>IGCSEs: English Language (A*), Mathematics (A*), English Literature, History, Combined Sciences (Double Award), Art, Spanish, French (‘Cambridge Top in the World’ Award for IGCSE French - First Language in June 2017)</p>
             </div>
+        </div>
 
+        <div class="container" id = "experience">
+            <div class = "title container">
+                <h2 class="centered">Experience</h2>
+            </div>
+            <div class = "child container">
+                <h3>Bloomberg L.P., Summer Insight Intern	 London, UK, August 2020</h3>
+                <ul>
+                    <li>Completed the Bloomberg Market Concepts course, including a module in managing an equity portfolio, while gaining insight into the Global Data and Sales/Analytics departments.</li>
+                    <li>Developed teamwork and presentation skills as part of a group project centered on financial analysis using the Terminal.</li>
+                </ul>
+            </div>
+
+            <div class = "child container">
+                <h3>Total S.A., In-Person Data Science Summer Intern	 Pau, France, June 2020 – August 2020</h3>
+                <ul>
+                    <li>Worked in an agile team, participating in the review and prioritization of business cases and the project management workflow.</li>
+                    <li>Conducted code review and testing in Python, an implementation of software containers and a benchmark of different versions of an object detection algorithm, while implementing programming good practices such as documentation and code versioning.</li>
+                    <li>Gained technical experience in Linux shell scripting, data analysis, data preparation, and machine learning.</li>
+                </ul>
+            </div>
+
+            <div class = "child container">
+                <h3>Spring Insight Weeks, Spring Intern	 London, UK, April 2020 – May 2020</h3>
+                <ul>
+                    <li>Deutsche Bank Spring into Technology Programme, HSBC Global Banking and Markets Spring Insight Programme, BP Female Discovery Week Programme.</li>
+                    <li>Improved people skills, featuring in the top 10 self-presentation videos required to submit for Deutsche Bank (out of ~ 90 interns). Selected as one of ~60 interns from over 3500 applications based on merit and potential to participate in the HSBC programme.</li>
+                </ul>
+            </div>
+
+            <div class = "child container">
+                <h3>Teach First, Taster Experience Participant (Non-profit)	London, UK, January 2020</h3>
+                <ul>
+                    <li>Developed competencies in resilience, problem solving and self-evaluation while participating in debates about education inequality. Planned and delivered a lesson to schoolchildren while actively improving through feedback from peers.</li>
+                </ul>
+            </div>
+        </div>
+    
     </body>
 </html>
