added html content (positions of responsibility)

--- a/links/cv.html
+++ b/links/cv.html
@@ -73,6 +73,34 @@
                 </ul>
             </div>
         </div>
+
+        <div class="container" id = "responsibility">
+            <div class = "title container">
+                <h2 class="centered">Positions of Responsibility</h2>
+            </div>
+            <div class = "child container">
+                <h3>UCL Dept. Language and Course Committee, Lead Representative	London, UK, October 2019 – Present</h3>
+                <ul>
+                    <li>Suggested resolutions for conflicts within the department and by voicing student body opinion, developing leadership skills by co-chairing meetings with the departmental staff.</li>
+                    <li>Dedicated 6 hours to answering offer-holder questions during video calls, building communication skills, understanding and a commitment to helping them make informed decisions.</li>
+                </ul>
+            </div>
+
+            <div class = "child container">
+                <h3>UCL Free Hype Society, Member 	London, UK, October 2019 – Present</h3>
+                <ul>
+                    <li>Expressed creativity by creating visual media for charities and NGOs, such as promotional material, to expand their platforms and raise awareness for their work. Developed technological aptitude by designing a new logo, branding guidelines and a newsletter with software such as Illustrator and InDesign.</li>
+                </ul>
+            </div>
+
+            <div class = "child container">
+                <h3>Secondary House, President	 Pau, France, August 2017 – June 2019</h3>
+                <ul>
+                    <li>Coordinated and led the creation of school projects, humanitarian initiatives and charity events, notably a Winter Ball and a Beach cleanup.</li>
+                    <li>Delegated roles to the students to ensure the success of the events. Improved outreach abilities by partnering with environmental organizations and conducted a year-long project raising awareness about sustainability in school, featuring in the local newspaper for the initiative.</li>
+                </ul>
+            </div>
+        </div>
     
     </body>
 </html>
