added html content (personal development)

--- a/links/cv.html
+++ b/links/cv.html
@@ -101,6 +101,21 @@
                 </ul>
             </div>
         </div>
+        
+        <div class="container" id = "development">
+            <div class = "title container">
+                <h2 class="centered">Personal Development</h2>
+            </div>
+            <div class = "child container">
+                <ul>
+                    <li>Fluent in English and French, Proficient in Mandarin (Speaking) and Spanish.</li>
+                    <li>Demonstrated flexibility, adaptability and resilience from having lived in 5 countries (UAE, China, France, Norway and the UK) and integrating into each new culture and school environment. Developed a holistic and worldly approach to thinking.</li>
+                    <li>Avid dancer and figure skater, having developed consistency and a strong work ethic by balancing sports with academics and extra-curricular activities.</li>
+                    <li>Self-learning Python 3, SQL, HTML5 and CSS through online courses on codecademy.com.</li>
+                    <li>Coordinating the founding of a new UCL society focused on third-culture Asian representation as Vice President. Currently expanding online community, increasing engagement by 92% on social media.</li>
+                </ul>
+            </div>
+        </div>
     
     </body>
 </html>
