fixed button center css

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
         </div>
 
-        <div class="button container">
-            <a href="./links/cv.html"><h3 class = "button">Here's my CV.</h3></a>
+        <div class="centered button container">
+            <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
         </div>
     </body>
 </html>
