added menu bar to main page and changed layout

--- a/index.html
+++ b/index.html
@@ -6,30 +6,52 @@
         <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
 
+    <header>
+        <ul>
+            <li><a href="#interests">Interests</a></li>
+            <li><a href="#careers">Careers</a></li>
+        </ul>
+    </header>
+
+
     <body>
-        <div class="header">
+        <div class="main-title">
             <h1>Hey. I'm Joy.</h1>
         </div>
 
-        <div class="interest container">
-            <div class = "child">
-                <h2>Coding</h2>
-                <p>I mean obviously since I'm trying to make a website and all...</p>
+        <div id = "interests">
+            <div class = "title container centered">
+                <h2>My interests</h2>
             </div>
 
-            <div class = "child">
-                <h2>Cooking</h2>
-                <p>Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
-            </div>
+            <div class="container">
+                <div class = "child square">
+                    <h3>Coding</h3>
+                    <p>I mean obviously since I'm trying to make a website and all...</p>
+                </div>
 
-            <div class = "child">
-                <h2>Dancing</h2>
-                <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
+                <div class = "child square">
+                    <h3>Cooking</h3>
+                    <p>Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
+                </div>
+
+                <div class = "child square">
+                    <h3>Dancing</h3>
+                    <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
+                </div>
             </div>
         </div>
 
-        <div class="centered button container">
-            <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
+
+        <div id = "careers">
+            <div class = "title container centered">
+                <h2>Careers</h2>
+            </div>
+
+            <div class="centered button container">
+                <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
+            </div>
         </div>
+
     </body>
 </html>
