changed button cv

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                 <h2>Careers</h2>
             </div>
 
-            <div class="centered button container">
-                <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
+            <div class="container centered">
+                <div class ="button">
+                    <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
+                </div>
             </div>
         </div>
 
