edited content in boxes

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <div class="container">
                 <div class = "child square">
                     <h3>Coding</h3>
-                    <p>I mean obviously since I'm trying to make a website and all...</p>
+                    <p>I mean obviously since I'm trying to make a website and all... Although I had no experienc with programming before arriving to univeristy, it was something I was interested in. By joining the AI society and self-learning, I've gained skills in coding and computer science.</p>
                 </div>
 
                 <div class = "child square">
                     <h3>Cooking</h3>
-                    <p>Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
+                    <p>I find it very relaxing and therapeutic to measure out ingredients, mix batter and make food look beautiful. Especially during quarantine, trying out new recipes and working with special ingredients has been fun!</p>
                 </div>
 
                 <div class = "child square">
                     <h3>Dancing</h3>
-                    <p>I really miss my afternoons doing dance classes and having coffee in London...</p>
+                    <p>I picked up dancing again after starting university, by joining the Dance Society. I really miss my afternoons doing dance classes and having coffee in London...</p>
                 </div>
             </div>
         </div>
@@ -48,9 +48,16 @@
                 <h2>Careers</h2>
             </div>
 
+            <div class="container">
+                <div class = "child square">
+                    <h3>Open for internship opportunities</h3>
+                    <p>As a second- year university student, I am actively searching for internship opportunities for the summer of 2021.</p>
+                </div>
+            </div>
+
             <div class="container centered">
                 <div class ="button">
-                    <a href="./links/cv.html" class = "centered"><h3>Here's my CV.</h3></a>
+                    <a href="./links/cv.html" class = "centered"><h3>Here's my CV. Have a look!</h3></a>
                 </div>
             </div>
         </div>
