--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class = "child square">
                     <h3>Coding</h3>
-                    <p>I mean obviously since I'm trying to make a website and all... Although I had no experienc with programming before arriving to univeristy, it was something I was interested in. By joining the AI society and self-learning, I've gained skills in coding and computer science.</p>
+                    <p>I mean obviously since I'm trying to make a website and all... Although I had no experience with programming before arriving to univeristy, it was something I was interested in. By joining the AI society and self-learning, I've gained skills in coding and computer science.</p>
                 </div>
 
                 <div class = "child square">
