updated CV content

--- a/links/cv.html
+++ b/links/cv.html
@@ -45,7 +45,7 @@
                 <h3>Bloomberg L.P., Summer Insight Intern	 London, UK, August 2020</h3>
                 <ul>
                     <li>Completed the Bloomberg Market Concepts course, including a module in managing an equity portfolio, while gaining insight into the Global Data and Sales/Analytics departments.</li>
-                    <li>Developed teamwork and presentation skills as part of a group project centered on financial analysis using the Terminal.</li>
+                    <li>Developed teamwork and presentation skills as part of a group project centered on financial analysis and the creation of an 8KPI quantitative model of company sustainability, using the Terminal..</li>
                 </ul>
             </div>
 
@@ -81,15 +81,16 @@
             <div class = "child container">
                 <h3>UCL Dept. Language and Course Committee, Lead Representative	London, UK, October 2019 – Present</h3>
                 <ul>
-                    <li>Suggested resolutions for conflicts within the department and by voicing student body opinion, developing leadership skills by co-chairing meetings with the departmental staff.</li>
-                    <li>Dedicated 6 hours to answering offer-holder questions during video calls, building communication skills, understanding and a commitment to helping them make informed decisions.</li>
+                    <li>Collected and summarized student opinions, and improved teamwork skills from being a member of several committees and organizations. </li>
+                    <li>Acted as the co-chair for committee meetings and captured key takeaways to share, gaining leadership and communication skills.</li>
+                    <li>Hosted video conferences (6 hours in total) to answer questions for offer-holders, giving help and suggestions on how to cope with university under special and unusual circumstances.</li>
                 </ul>
             </div>
 
             <div class = "child container">
                 <h3>UCL Free Hype Society, Member 	London, UK, October 2019 – Present</h3>
                 <ul>
-                    <li>Expressed creativity by creating visual media for charities and NGOs, such as promotional material, to expand their platforms and raise awareness for their work. Developed technological aptitude by designing a new logo, branding guidelines and a newsletter with software such as Illustrator and InDesign.</li>
+                    <li>Created visual media for charities and NGOs, such as promotional material, to expand their platforms and raise awareness for their work. Developed technological aptitude by designing a new logo, branding guidelines and a newsletter with software such as Illustrator and InDesign.</li>
                 </ul>
             </div>
 
@@ -108,10 +109,10 @@
             </div>
             <div class = "child container">
                 <ul>
+                    <li>Self-learning Python 3, SQL, HTML5 and CSS.</li>
                     <li>Fluent in English and French, Proficient in Mandarin (Speaking) and Spanish.</li>
                     <li>Demonstrated flexibility, adaptability and resilience from having lived in 5 countries (UAE, China, France, Norway and the UK) and integrating into each new culture and school environment. Developed a holistic and worldly approach to thinking.</li>
                     <li>Avid dancer and figure skater, having developed consistency and a strong work ethic by balancing sports with academics and extra-curricular activities.</li>
-                    <li>Self-learning Python 3, SQL, HTML5 and CSS through online courses on codecademy.com.</li>
                     <li>Coordinating the founding of a new UCL society focused on third-culture Asian representation as Vice President. Currently expanding online community, increasing engagement by 92% on social media.</li>
                 </ul>
             </div>
