used google fonts

--- a/links/cv.html
+++ b/links/cv.html
@@ -45,7 +45,7 @@
                 <h3>Bloomberg L.P., Summer Insight Intern	 London, UK, August 2020</h3>
                 <ul>
                     <li>Completed the Bloomberg Market Concepts course, including a module in managing an equity portfolio, while gaining insight into the Global Data and Sales/Analytics departments.</li>
-                    <li>Developed teamwork and presentation skills as part of a group project centered on financial analysis and the creation of an 8KPI quantitative model of company sustainability, using the Terminal..</li>
+                    <li>Developed teamwork and presentation skills as part of a group project centered on financial analysis and the creation of an 8KPI quantitative model of company sustainability, using the Terminal.</li>
                 </ul>
             </div>
 
