add art interest and link to linkedin

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     <h3>Dancing</h3>
                     <p>I picked up dancing again after starting university, by joining the Dance Society. I really miss my afternoons doing dance classes and having coffee in London...</p>
                 </div>
+
+                <div class = "child square">
+                    <h3>Art</h3>
+                    <p>Although I don't study art anymore, it is still something I enjoy doing and I have sketchbooks filled with pencil sketches, watercolours, acrylics and more.</p>
+                </div>
             </div>
         </div>
 
@@ -53,13 +58,19 @@
                     <h3>Open for internship opportunities</h3>
                     <p>As a second-year university student, I am actively searching for internship opportunities for the summer of 2021.</p>
                 </div>
+
+                <div class = "child square">
+                    <h3>LinkedIn Profile</h3>
+                    <p><a href="https://www.linkedin.com/in/joy-xu-70268b194/" class = "centered" target = "_blank">If you are interested, you can check out my LinkedIn profile by clicking here.<a></p>
+                </div>
             </div>
 
             <div class="container centered">
                 <div class ="button">
-                    <a href="./links/cv.html" class = "centered"><h3>Here's my CV. Have a look!</h3></a>
+                    <a href="./links/cv.html" class = "centered" target = "_blank"><h3>Here's my CV. Have a look!</h3></a>
                 </div>
             </div>
+
         </div>
 
     </body>
